--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -123,6 +123,7 @@
 @media (max-width: 767px)
   body
     padding-top: 78px
+
   .container
     max-width: 700px
     width: 92%
@@ -152,7 +153,8 @@
       bottom: 0
       padding-top: 30px
       &--visible
-        display: block
+        display: block        
+        overflow-y: scroll
     &-menu
       flex-direction: column
       &__item
